welcome.lessons.welcome.array.island.Island.scala.error
island:13: error: not found: value t
      if(t(j) == i){
         ^